# TestAssignment-DB-manipulations

./: CMakeLists.txt
TestAssignment1/: CMakeLists.txt  Database.cpp  Database.h  TestAssignment1.cpp  TestAssignment1.h  Worker.cpp  Worker.h  WorkerDB.cpp  WorkerDB.h
